t/test-data/Models/bad/InvalidIn.nhd
*** general ***

author   = Jonathan Worthington
date     = 2018-03-13
taxonomy = InvalidIn

+short

  Module using invalid in.

*** input ***

+monkeys
  type = integer
  validator = ge(0)
  ++labels
    en = Monkeys
    de = Affen
  ++units
    en = -

*** technical ***

+multiply
  value = 20
  ++units
    en = monkeys/hour
    de = affen/Stunde
  ++description
    tech1 parameter

*** output ***

+result
  print = 7
  ++units
    en = monkeys/hour
    de = affen/Stunde
  ++formula
    Tech(multiply) * In(chimps)
  ++description
    Final result
